# autodiff

./: CMakeLists.txt  build.sh  gradCheck.cpp  main.cpp  run.sh  transformer_test.cpp
src/: GradCheck.h  Modules.h  Nodes.h  Optimizers.h  loadData.h  transformer.h
